--- a/templates/sentence-flashcard-template-v2/sentence-flashcard-template-v2.css
+++ b/templates/sentence-flashcard-template-v2/sentence-flashcard-template-v2.css
@@ -14,8 +14,8 @@
 .card.nightMode {
   background-color: var(--bg-color);
   color: var(--fg-color);
-  font-family: "", "Merriweather", "JetBrainsMono Nerd Font", "Open Sans",
-    sans-serif;
+  font-family: 'Maple Mono NF', 'JetBrainsMono Nerd Font', 'Merriweather',
+    'JetBrainsMono Nerd Font', 'Open Sans', sans-serif;
   font-size: 16px;
   padding: 22px;
   padding: 5px;
@@ -94,17 +94,17 @@ li {
 
 summary {
   cursor: pointer;
-  list-style-type: "";
+  list-style-type: '';
 }
 
 summary::after {
   color: var(--fg-label);
-  content: "…";
+  content: '…';
   font-size: 12px;
 }
 
 details[open] summary::after {
-  content: "";
+  content: '';
 }
 
 img {
