--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,8 @@
 .card.nightMode {
   background-color: var(--bg-color);
   color: var(--fg-color);
-  font-family: '', 'Merriweather', 'JetBrainsMono Nerd Font', 'Open Sans',
-    sans-serif;
+  font-family: 'Maple Mono NF', 'JetBrainsMono Nerd Font', 'Merriweather',
+    'JetBrainsMono Nerd Font', 'Open Sans', sans-serif;
   font-size: 16px;
   padding: 22px;
   padding: 5px;
@@ -90,6 +90,21 @@ li {
   font-weight: bold;
   margin-bottom: 4px;
   padding: 2px 12px;
+}
+
+summary {
+  cursor: pointer;
+  list-style-type: '';
+}
+
+summary::after {
+  color: var(--fg-label);
+  content: '…';
+  font-size: 12px;
+}
+
+details[open] summary::after {
+  content: '';
 }
 
 img {
